# ovos-phal-plugin-mac

./: .coveragerc  .gitattributes  .gitignore  .projenrc.json  CHANGELOG.md  README.md  package.json  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: release_build.yml  release_please.yml  unit_tests.yml
.projen/: files.json
phal_plugin_mac/: __init__.py  version.py
requirements/: requirements.txt
test/: test_plugin.py
